[project]
name = "idefense-ai-python"
version = "0.1.0"
description = "LangGraph agent for arithmetic operations using DeepSeek."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipython>=9.14.1",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-openai>=0.3.0",
    "langgraph>=1.2.4",
    "python-dotenv>=1.2.2",
]

[project.scripts]
idefense-ai = "idefense_ai.entry:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
